--- a/C&CPP/01-C-Basic/20-文件读写.md
+++ b/C&CPP/01-C-Basic/20-文件读写.md
@@ -21,7 +21,7 @@
 
 **数据流**：输入输出是数据的传送过程，数据如流水一样从一端传送到另一端，因此常将输入输出形象的称为流，即数据流。
 
-### 文件名
+### 1.1 文件名
 
 一个文件要有一个唯一的标识符号，以便于识别和引用。
 
@@ -29,7 +29,7 @@
 如：`C:\C\Temp\file1.dat`，`C:\C\Temp`表示文件路径、`file1`表示文件名主干、`.dat`表示文件后缀
 ```
 
-### 分类
+### 1.2 文件分类
 
 根据数据的组织形式，数据可以分为文本文件和二进制文件，数据在内存中是以二进制形式存储的、如果不加转换输出到外部存储，就是二进制文件，可以认为其就是内存数据的映射，所以也称为映像文件(image file)。
 
@@ -38,11 +38,11 @@
 - 在二进制模式中，程序可以访问文件的每个字节。如果读写一个旧式 MS-DOS 文本文件，程序会看到文件中的 `\r` 和 `\n` 字符，不会发生映射。如果要编写旧式Mac 格式、MS-DOS 格式或 UNIX/Linux 格式的文件模式程序，应该使用二进制模式，这样程序才能确定实际的文件内容并执行相应的动作。
 - 在文本模式中，程序所见的内容和文件的实际内容不同。程序以文本模式读取文件时，把本地环境表示的行末尾或文件结尾映射为 C 模式。例如，C 程序在旧式Macintosh中以文本模式读取文件时，把文件中的 `\r` 转换成 `\n` ；以文本模式写入文件时，把 `\n` 转换成 `\r` 。或者，C 文本模式程序在 MS-DOS 平台读取文件时，把 `\r\n` 转换成 `\n` ；写入文件时，把 `\n` 转换成 `\r\n` 。在其他环境中编写的文本模式程序也会做类似的转换。
 
-### 文件缓冲区
+### 1.3 文件缓冲区
 
 ANSI C标准采用**文件缓冲文件系统**来处理数据，所谓文件缓冲文件系统是指系统自动的在内存区为程序中的每个正在使用的文件开辟一个文件缓冲区，从内存向磁盘输出数据必须先送到文件缓冲区，装满缓冲区后一起送到磁盘。
 
-### 文件指针
+### 1.4 文件指针
 
 文件缓冲系统中关键的概念是**文件类型指针**，简称**文件指针**，每个被使用的文件都开辟一个相应的文件信息保存区，用于存放文件的有关信息(文件名、状态等)，这些信息都保存在一个结构体中，该结构体由系统声明，名为FILE。
 
@@ -70,7 +70,7 @@ crw-rw-rw- 1 root tty 5, 0 Jun  4 18:45 /dev/tty
 
 `fprintf(stderr, "Value of errno: %d\n", 1);`：表示在屏幕上输出错误信息：`Value of errno: 1`
 
-### I/O的级别：底层`I/O`和高级`I/O`
+### 2.1 I/O的级别：底层`I/O`和高级`I/O`
 
 - 底层 I/O（low-level I/O ）使用操作系统提供的基本I/O服务。
 - 标准高级 I/O（standard high-level I/O ）使用C库的标准包和stdio.h 头文件定义。因为无法保证所有的操作系统都使用相同的底层I/O模型，C标准只支持标准I/O包。
@@ -85,7 +85,9 @@ crw-rw-rw- 1 root tty 5, 0 Jun  4 18:45 /dev/tty
 
 在操作文件之前要用 fopen 打开文件，操作完毕要用 fclose 关闭文件。打开文件就是在操作系统中分配一些资源用于保存该文件的状态信息，并得到该文件的标识，以后用户程序就可以用这个标识对文件做各种操作，关闭文件则释放文件在操作系统中占用的资源，使文件的标识失效，用户程序就无法再操作这个文件了。
 
-### 打开关闭文件
+### 3.1 打开关闭文件
+
+#### 打开文件
 
 `FILE *fopen( const char * path, const char * mode);`：path是文件的路径名，mode表示打开方式。如果文件打开成功，就返回一个`FILE *`文件指针来标识这个文件。以后调用其它函数对文件做读写操作都要提供这个指针，以指明对哪个文件进行操作。FILE是C标准库中定义的结构体类型，其中包含该文件在内核中标识、I/O缓冲区和当前读写位置等信息，但调用者不必知道FILE结构体都有哪些成员，调用者只是把文件指针在库函数接口之间传来传去，而文件指针所指的FILE结构体的成员在库函数内部维护，调用者不应该直接访问这些成员，这种编程思想在面向对象方法论中称为封装（Encapsulation）。像`FILE *`这样的指针称为不透明指针（Opaque Pointer）或者叫句柄（Handle），`FILE *`指针就像一个把手（Handle），抓住这个把手就可以打开门或抽屉，但用户只能抓这个把手，而不能直接抓门或抽屉。
 
@@ -102,8 +104,6 @@ void sample(){
     }
 }
 ```
-  
-`int fclose( FILE *fp );`：把文件指针传给 fclose 可以关闭它所标识的文件，关闭之后该文件指针就无效了，不能再使用了。如果 fclose 调用出错（比如传给它一个无效的文件指针）则返回 EOF 并设置 errno，，EOF 在 `stdio.h` 中定义，如果成功关闭，fclose() 函数返回 0。
 
 fopen 的 mode 说明：
 
@@ -119,7 +119,7 @@ fopen 的 mode 说明：
 如果处理的是二进制文件，则需使用下面的访问模式来取代上面的访问模式：
 
 ```c
-    "rb", "wb", "ab", "rb+", "r+b", "wb+", "w+b", "ab+", "a+b"
+"rb", "wb", "ab", "rb+", "r+b", "wb+", "w+b", "ab+", "a+b"
 ```
 
 新的C11新增了带x 字母的写模式：
@@ -134,14 +134,20 @@ fopen 的 mode 说明：
 2. 如果环境允许，x 模式的独占特性使得其他程序或线程无法访问正在被打开的文件。
 3. 如果使用任何一种"w"模式（不带x字母）打开一个现有文件，该文件的内容会被删除，以便程序在一个空白文件中开始操作。然而，如果使用带x字母的任何一种模式，将无法打开一个现有文件。
 
-### 文件 `I/O`
+#### 关闭文件
+  
+`int fclose( FILE *fp );`：把文件指针传给 fclose 可以关闭它所标识的文件，关闭之后该文件指针就无效了，不能再使用了。如果 fclose 调用出错（比如传给它一个无效的文件指针）则返回 EOF 并设置 errno，，EOF 在 `stdio.h` 中定义，如果成功关闭，fclose() 函数返回 0。
+
+### 3.2 文件 `I/O`
 
 相关函数:
 
 ```c
+//读取或输入字符
 int fgetc(FILE *stream);
 int fputc(int ch, FILE *stream);
 
+//读取或输入字符串
 char *fgets(char *string, int n, FILE *stream);
 int fputs(char *string, FILE *stream);
 
@@ -151,17 +157,19 @@ int fprintf (FILE *, const char *, ...);//格式化输出，类似printf
 
 #### `fgets()`函数
 
+三个参数：
+
 - 它的第1个参数和 gets() 函数一样，也是表示储存输入位置的地址（char * 类型）
 - 第2个参数是一个整数，表示待输入字符串的大小
 - 最后一个参数是文件指针，指定待读取的文件。
 
-fgets() 函数读取输入直到：
+文件结束处理:
 
-- 第 1 个换行符的后面
-- 读到文件结尾
-- 读取 STLEN-1 个字符
-
-然后，fgets() 在末尾添加一个空字符使之成为一个字符串。字符串的大小是其字符数加上一个空字符。如果fgets() 在读到字符上限之前已读完一整行，它会把表示行结尾的换行符放在空字符前面。
+1. `fgets()` 函数读取输入直到下面情况：
+   1. 第 1 个换行符的后面
+   2. 读到文件结尾
+   3. 读取 STLEN-1 个字符
+2. 然后，fgets() 在末尾添加一个空字符使之成为一个字符串。字符串的大小是其字符数加上一个空字符。如果 fgets() 在读到字符上限之前已读完一整行，它会把表示行结尾的换行符放在空字符前面。
 
 返回值:
 
@@ -181,21 +189,26 @@ fputs() 函数接受两个参数：
 
 若成功则返回写出的字符个数, 返回EOF 则表示有错误发生.
 
-### 读写二进制文件
+### 3.3 读写二进制文件
 
 ```c
-size_t fread (void * ptr, size_t size, size_t count , FILE * fp);
-size_t fwrite (const void * ptr, size_t size, size_t count, FILE * fb);
+size_t fwrite(const void * restrict ptr, size_t size, size_t nmemb,FILE * restrict fp);
+size_t fread(void * restrict ptr, size_t size, size_t nmemb,FILE * restrict fp);
 ```
 
-参数说明：以`fread(f,4,10,fp)`为例：f 是一个 float 类型数组名(代表数组首地址)，这个函数从 fp 所指向的文件读入 10 个 4 个字节的数据，存储在 f 数组中。
+两个函数参数意义基本一致：以 `fread(f, 4, 10,f p)` 为例：假设 f 是一个 float 类型数组名(代表数组首地址)，这个函数从 fp 所指向的文件读入 10 个 4 个字节的数据，存储在 f 数组中。
 
-- ptr ：fread读取的数据存储在 ptr 指向的容器，fwrite 把 ptr 指向的数据写入文件。
+- ptr ：fread 读取的数据存储在 ptr 指向的容器，fwrite 把 ptr 指向的数据写入文件。
 - size：这是要被写入或读取的每个元素的大小，以字节为单位。
 - count：这是元素的个数，每个元素的大小为 size 字节。
 - fb：指向被操作的文件。
 
-### 随机读写文件
+返回值：
+
+- fwrite() 函数返回成功写入项的数量。正常情况下，该返回值就是nmemb ，但如果出现写入错误，返回值会比 nmemb 小。
+- fread() 函数返回成功读取项的数量。正常情况下，该返回值就是nmemb ，但如果出现读取错误或读到文件结尾，该返回值就会比 nmemb 小。
+
+### 3.4 随机读写文件
 
 随机访问不是按照数据在文件中的物理位置次序进行读写，而是可以对任意位置上的数据进行访问，有了随机访问，便可把文件看作是数组，在 fopen() 打开的文件中直接移动到任意字节处。
 
@@ -204,14 +217,71 @@ size_t fwrite (const void * ptr, size_t size, size_t count, FILE * fb);
 int    fseek (FILE *, long, int); 移动文件位置标记
 long   ftell (FILE *);   获取文件当前标记的位置，配合 SEEK_END 用以用于获取文件大小
 void   rewind (FILE *);  文件标记回到开始的位置
-
-//示例
-fseek(fp,100L,0)    将文件位置移动到离文件开头100个字节的位置
-fseek(fp,100L,1)    将文件位置向前移动到离文件当前位置100个字节的位置
-fseek(fp,-100L,2)   将文件位置向左移动到离文件末尾位置100个字节的位置
 ```
 
-### 文件结尾
+#### `fseek()` 函数
+
+- fseek() 的第1个参数是FILE 指针，指向待查找的文件，fopen() 应该已打开该文件。
+- fseek() 的第2个参数是偏移量 （ offset ）。该参数表示从起始点开始要移动的距离。该参数必须是一个 long 类型的值，可以为正（前移）、负（后移）或 0 （保持不动）。
+- fseek() 的第3个参数是模式，该参数确定起始点。根据 ANSI 标准，在 stdio.h 头文件中规定了几个表示模式的明示常量。
+
+| 模式 | 偏移量的起始点 |
+---|---|
+| SEEK_SET | 文件开始处 |
+| SEEK_CUR | 当前位置 |
+| SEEK_END | 文件末尾 |
+
+>旧的实现可能缺少这些定义，可以使用数值0L 、1L 、2L 分别表示这3种模式。
+
+示例：
+
+```java
+fseek(fp,100L,0)    //将文件位置移动到离文件开头100个字节的位置
+fseek(fp,100L,1)    //将文件位置向前移动到离文件当前位置100个字节的位置
+fseek(fp,-100L,2)   //将文件位置向左移动到离文件末尾位置100个字节的位置
+fseek(fp, 0L, SEEK_SET);     // 定位至文件开始处
+fseek(fp, 10L, SEEK_SET);    // 定位至文件中的第10个字节
+fseek(fp, 2L, SEEK_CUR);     // 从文件当前位置前移2个字节
+fseek(fp, 0L, SEEK_END);     // 定位至文件结尾
+fseek(fp, -10L, SEEK_END);   // 从文件结尾处回退10个字节
+```
+
+返回值：
+
+- 如果一切正常，fseek() 的返回值为0。
+- 如果出现错误（如试图移动的距离超出文件的范围），其返回值为-1 。
+
+#### `ftell()` 函数
+
+- ftell() 函数的返回类型是long ，它返回的是参数指向文件的当前位置距文件开始处的字节数。
+- ftell() 通过返回距文件开始处的字节数来确定文件的位置。文件的第 1 个字节到文件开始处的距离是 0 ，以此类推。ANSI C 规定，该定义适用于以二进制模式打开的文件，以文件模式打开文件的情况不同。
+
+#### 可移植性
+
+理论上，fseek() 和ftell() 应该符合 UNIX 模型。但是，不同系统存在着差异，有时确实无法做到与 UNIX 模型一致。因此，ANSI 对这些函数降低了要求。
+
+- 在二进制模式中，实现不必支持 SEEK_END 模式。移植性更高的方法是逐字节读取整个文件直到文件末尾。
+- 在文本模式中，只有以下调用能保证其相应的行为
+
+函数调用 | 效果
+-----|---
+`fseek(file, 0L, SEEK_SET)` | 定位至文件开始处
+`fseek(file, 0L, SEEK_CUR)` | 保持当前位置不动
+`fseek(file, 0L, SEEK_END)` | 定位至文件结尾
+`fseek(file,ftell-pos, SEEK_SET)` | 到距文件开始处 ftell-pos 的位置，ftell-pos 是 ftell() 的返回值
+
+#### `fgetpos()` 和 `fsetpos()` 函数
+
+fseek() 和 ftell() 潜在的问题是，它们都把文件大小限制在 long 类型能表示的范围内。随着存储设备的容量迅猛增长，文件也越来越大。鉴于此，ANSI C 新增了两个处理较大文件的新定位函数：fgetpos() 和 fsetpos() 。这两个函数不使用 long 类型的值表示位置，它们使用一种新类型：`fpos_t` （代表 file position type，文件定位类型）。fpos_t 类型不是基本类型，它根据其他类型来定义。
+
+相关函数：
+
+```c
+int fgetpos(FILE * restrict stream, fpos_t * restrict pos);
+int fsetpos(FILE *stream, const fpos_t *pos);
+```
+
+### 3.5 文件结尾
 
 事实上有很多方式来确定文件是否结束了。
 
@@ -246,15 +316,76 @@ while (( ch = getc(fp)) != EOF){
 }
 ```
 
-### 错误处理
+### 3.6 错误处理
 
 ```c
-ferror(FILE *)：如果 ferror 返回值 为0，表示未出错，如果返回一个非 0 值，表示出错。
-clearerr(FILE *)：使文件错误标志和文件结束标志为0
+//如果 ferror 返回值为 0，表示未出错，如果返回一个非 0 值，表示出错。
+ferror(FILE *fp)
+
+//使文件错误标志和文件结束标志为 0。
+clearerr(FILE *fp)
+
+//如果标准输入函数返回EOF ，则通常表明函数已到达文件结尾。然而，出现读取错误时，函数也会返回EOF 。
+//feof() 和ferror() 函数用于区分这两种情况。当上一次输入调用检测到文件结尾时，feof() 函数返回一个非零值，否则返回 0。
+int feof(FILE *fp)
 ```
 
 ---
-## 4 路径
+## 4 其他 `I/O` 函数
+
+```c
+// int ungetc() 函数把c 指定的字符放回输入流中。如果把一个字符放回输入流，下次调用标准输入函数时将读取该字符
+int ungetc(int c, FILE *fp)
+
+// 调用fflush() 函数引起输出缓冲区中所有的未写入数据被发送到fp 指定的输出文件。这个过程称为刷新缓冲区 。
+int fflush()
+
+// setvbuf() 函数创建了一个供标准I/O函数替换使用的缓冲区。在打开文件后且未对流进行其他操作之前，调用该函数。指针fp 识别待处理的流，buf 指向待使用的存储区。如果buf 的值不是NULL ，则必须创建一个缓冲区。
+int setvbuf(FILE * restrict fp, char * restrict buf, int mode, size_t size);
+```
+
+---
+## 5 标准 `I/O` 原理
+
+#### 使用标准 `I/O` 的第1步：调用 `fopen()` 打开文件
+
+- fopen() 函数不仅打开一个文件，还创建了一个缓冲区（在读写模式下会创建两个缓冲区）以及一个包含文件和缓冲区数据的结构。
+- fopen() 返回一个指向该结构的指针，以便其他函数知道如何找到该结构。这个结构通常包含以下内容：
+  - 一个指定流中当前位置的文件位置指示器。
+  - 错误和文件结尾的指示器
+  - 一个指向缓冲区开始处的指针
+  - 一个文件标识符
+  - 一个计数（统计实际拷贝进缓冲区的字节数）
+- 如果以文本模式打开该文件，就获得一个文本流；如果以二进制模式打开该文件，就获得一个二进制流。
+
+下面是文件指针的一种定义：
+
+```c
+  struct _iobuf {
+    char *_ptr;
+    int _cnt;
+    char *_base;
+    int _flag;
+    int _file;
+    int _charbuf;
+    int _bufsiz;
+    char *_tmpfname;
+  };
+  typedef struct _iobuf FILE;
+```
+
+#### 使用标准`I/O`的第2步：调用输入函数
+
+如 fscanf() 、getc() 或 fgets() 。
+
+- 一调用这些函数，文件中的缓冲大小数据块就被拷贝到缓冲区中。缓冲区的大小因实现而异，一般是512字节或是它的倍数，如4096或16384（随着计算机硬盘容量越来越大，缓冲区的大小也越来越大）。最初调用函数，除了填充缓冲区外，还要设置fp 所指向的结构中的值。尤其要设置流中的当前位置和拷贝进缓冲区的字节数。通常，当前位置从字节0 开始。
+- 在初始化结构和缓冲区后，输入函数按要求从缓冲区中读取数据。在它读取数据时，文件位置指示器被设置为指向刚读取字符的下一个字符。由于stdio.h 系列的所有输入函数都使用相同的缓冲区，所以调用任何一个函数都将从上一次函数停止调用的位置开始。
+- 当输入函数发现已读完缓冲区中的所有字符时，会请求把下一个缓冲大小的数据块从文件拷贝到该缓冲区中。以这种方式，输入函数可以读取文件中的所有内容，直到文件结尾。
+- 函数在读取缓冲区中的最后一个字符后，把结尾指示器设置为真。于是，下一次被调用的输入函数将返回EOF 。
+- 输出函数以类似的方式把数据写入缓冲区。当缓冲区被填满时，数据将被拷贝至文件中。
+
+---
+## 6 路径
 
 ### Linux
 
@@ -272,3 +403,4 @@ clearerr(FILE *)：使文件错误标志和文件结束标志为0
 ## 引用
 
 - [Linux C编程一站式学习：第 25 章 C 标准库-标准I/O库函数](https://akaedu.github.io/book/ch25s02.html)
+- C Primer Plus
