--- a/C&CPP/01-C-Basic/20-文件读写.md
+++ b/C&CPP/01-C-Basic/20-文件读写.md
@@ -187,7 +187,8 @@ fputs() 函数接受两个参数：
 
 返回值:
 
-若成功则返回写出的字符个数, 返回EOF 则表示有错误发生.
+- 若成功则返回写出的字符个数
+- 返回EOF 则表示有错误发生
 
 ### 3.3 读写二进制文件
 
@@ -260,7 +261,7 @@ fseek(fp, -10L, SEEK_END);   // 从文件结尾处回退10个字节
 
 理论上，fseek() 和ftell() 应该符合 UNIX 模型。但是，不同系统存在着差异，有时确实无法做到与 UNIX 模型一致。因此，ANSI 对这些函数降低了要求。
 
-- 在二进制模式中，实现不必支持 SEEK_END 模式。移植性更高的方法是逐字节读取整个文件直到文件末尾。
+- 在二进制模式中，实现不必支持 SEEK_END 模式。移植性更高的方法是逐字节读取整个文件直到文件末尾。可以使用预处理器的条件编译来提供程序的移植性。
 - 在文本模式中，只有以下调用能保证其相应的行为
 
 函数调用 | 效果
@@ -399,7 +400,7 @@ int setvbuf(FILE * restrict fp, char * restrict buf, int mode, size_t size);
 
 具体参考：[C语言windows目录操作](http://blog.csdn.net/yangalbert/article/details/7455241)
 
---
+---
 ## 引用
 
 - [Linux C编程一站式学习：第 25 章 C 标准库-标准I/O库函数](https://akaedu.github.io/book/ch25s02.html)
