--- a/C&CPP/01-C-Basic/19-字节对齐与内存分配.md
+++ b/C&CPP/01-C-Basic/19-字节对齐与内存分配.md
@@ -1,7 +1,5 @@
 # 字节对齐
 
->内容来自：[C语言字节对齐问题详解](http://www.cnblogs.com/clover-toeic/p/3853132.html)
-
 ## 1 什么是字节对齐
 
 现代计算机中，内存空间按照字节划分，理论上可以从任何起始地址访问任意类型的变量。但实际中在访问特定类型变量时经常在特定的内存地址访问，这就需要各种类型数据按照一定的规则在空间上排列，而不是顺序一个接一个地存放，这就是对齐。
@@ -34,3 +32,7 @@
 ### 2.3 位域对齐
 
 - [ ] todo
+
+## 音乐
+
+- [C语言字节对齐问题详解](http://www.cnblogs.com/clover-toeic/p/3853132.html)
