--- a/C&CPP/01-C-Basic/16-结构体.md
+++ b/C&CPP/01-C-Basic/16-结构体.md
@@ -51,7 +51,7 @@ struct book library;
 声明且定义结构体：
 
 ```c
-    struct Date1 {
+    struct Date {
         int month;
         int year;
         int day;
@@ -196,7 +196,53 @@ void releaseInfo(struct namect * pst){
 }
 ```
 
-## 8 位域
+## 8 复合字面量和结构体
+
+C99 的复合字面量特性可用于结构和数组。如果只需要一个临时结构值，复合字面量很好用。例如，可以使用复合字面量创建一个数组作为函数的参数或赋给另一个结构。
+
+```c
+// 结构模版：标记是 book
+struct book {
+    char title[MAXTITL];
+    char author[MAXAUTL];
+    float value;
+};
+
+struct book readfirst;
+
+readfirst = (struct book) {"Crime and Punishment", "Fyodor Dostoyevsky", 11.25};
+```
+
+还可以把复合字面量作为函数的参数。如果函数接受一个结构，可以把复合字面量作为实际参数传递：
+
+```c
+struct rect {double x; double y;};
+double rect_area(struct rect r){return r.x * r.y;}
+...
+double area;
+area = rect_area( (struct rect) {10.5, 20.0});
+```
+
+如果函数接受一个地址，可以传递复合字面量的地址：
+
+```c
+struct rect {double x; double y;};
+double rect_areap(struct rect * rp){
+    return rp->x * rp->y;
+}
+
+...
+double area;
+area = rect_areap( &(struct rect) {10.5, 20.0});
+```
+
+## 9 结构体的伸缩型数组成员（C99）
+
+## 10 匿名结构体（C11）
+
+## 11 将结构体保持在文件中
+
+## 12 位域（位字段）
 
 使用位域可以更好的利用内存空间。 位域声明：
 
