--- a/C&CPP/01-C-Basic/16-结构体.md
+++ b/C&CPP/01-C-Basic/16-结构体.md
@@ -238,27 +238,97 @@ area = rect_areap( &(struct rect) {10.5, 20.0});
 
 ## 9 结构体的伸缩型数组成员（C99）
 
+C99新增了一个特性：伸缩型数组成员（flexible array member ），利用这项特性声明的结构，其最后一个数组成员具有一些特性。
+
+- 第1个特性是，该数组不会立即存在。
+- 第2个特性是，使用这个伸缩型数组成员可以编写合适的代码，就好像它确实存在并具有所需数目的元素一样。
+
+声明一个伸缩型数组成员有如下规则：
+
+- 伸缩型数组成员必须是结构的最后一个成员；
+- 结构中必须至少有一个成员；
+- 伸缩数组的声明类似于普通数组，只是它的方括号中是空的。
+
+```c
+struct flex{
+    int count;
+    double average;
+    double scores[];// 伸缩型数组成员
+};
+```
+
+使用：
+
+```c
+    struct flex *pf1;    // 声明一个指针
+    struct flex *pf2;    // 声明一个指针
+
+    // 请求为一个结构和一个数组分配存储空间
+    pf1 = malloc(sizeof(struct flex) + 5 * sizeof(double));
+    // 可以为伸缩型数组成员分配不同的存储空间
+    pf2 = malloc(sizeof(struct flex) + 9 * sizeof(double));
+
+    pf1->scores[0] = 1.0F;
+    pf2->scores[0] = 10.0F;
+
+    printf("pf1->scores[0]  = %f\n", pf1->scores[0]);
+    printf("pf2->scores[0]  = %f\n", pf2->scores[0]);
+
+    free(pf1);
+    free(pf2);
+```
+
+带伸缩型数组成员的结构确实有一些特殊的处理要求。
+
+- 第一，不能用结构进行赋值或拷贝，确实要进行拷贝，应使用memcpy() 函数。
+- 第二，不要以按值方式把这种结构传递给结构。原因相同，按值传递一个参数与赋值类似。要把结构的地址传递给函数。
+- 第三，不要使用带伸缩型数组成员的结构作为数组成员或另一个结构的成员。
+
 ## 10 匿名结构体（C11）
+
+匿名结构是一个没有名称的结构成员：
+
+```c
+//命名的结构体
+struct names
+{
+    char first[20];
+    char last[20];
+};
+struct person
+{
+    int id;
+    struct names name;    // 嵌套结构成员
+};
+struct person ted = {8483, {"Ted", "Grass"}};
+
+// 在C11中，可以用嵌套的匿名成员结构定义person ：
+struct person
+{
+    int id;
+    struct {char first[20]; char last[20];}; // 匿名结构
+};
+
+// 初始化ted 的方式相同：
+struct person ted = {8483, {"Ted", "Grass"}};
+
+//在访问ted 时简化了步骤，只需把first 看作是person 的成员那样使用它：
+puts(ted.first);
+```
 
 ## 11 将结构体保持在文件中
 
-## 12 位域（位字段）
-
-使用位域可以更好的利用内存空间。 位域声明：
+将结构体保持在文件中，或者从保存的数据创建结构体，比较合适的方式是使用 fread() 和fwrite() 函数读写结构大小的单元。
 
 ```c
- struct
-    {
-      type [member_name] : width ;
-    };
+#define MAXTITL 40
+#define MAXAUTL 40
+
+struct book {
+    char title[MAXTITL];
+    char author[MAXAUTL];
+    float value;
+};
+
+fwrite(&primer, sizeof(struct book), 1, pbooks);
 ```
-
-- ``type``：整数类型，决定了如何解释位域的值。类型可以是整型、有符号整型、无符号整型。
-- ``member_name``：位域的名称。
-- ``width``：位域中位的数量。宽度必须小于或等于指定类型的位宽度。
-
-关于位域有以下特点：
-
-- 一个位域必须存储在同一个字节中，不能跨两个字节。如一个字节所剩空间不够存放另一位域时，应从下一单元起存放该位域。也可以有意使某位域从下一单元开始。
-- 由于位域不允许跨两个字节，因此位域的长度不能大于一个字节的长度。
-- 位域可以无位域名，这时它只用来作填充或调整位置。无名的位域是不能使用的。
