--- a/C&CPP/01-C-Basic/22-动态内存管理.md
+++ b/C&CPP/01-C-Basic/22-动态内存管理.md
@@ -57,4 +57,4 @@ int main(){
 ---
 ## 4 `void*`类型
 
-`calloc`等函数返回值为void指针类型， c99允许使用void指针类型，void不指向任何类型的数据，应该把其理解为执行向空类型或者不指向确定的类型的数据
+`calloc`等函数返回值为void指针类型， c99允许使用void指针类型，void不指向任何类型的数据，应该把其理解为执行向空类型或者不指向确定的类型的数据。
