--- a/C&CPP/01-C-Basic/01-C语言简介.md
+++ b/C&CPP/01-C-Basic/01-C语言简介.md
@@ -40,10 +40,9 @@ C 的第一个标准是由 ANSI 发布的。虽然这份文档后来被国际标
 ---
 ## 4 C 语言编译器
 
-- gcc：<https://gcc.gnu.org/>
-- clang：<https://clang.llvm.org/>
-- visual c++：微软
-- intel c++
+- gcc：<https://gcc.gnu.org/> GNU编译器集合。
+- clang：<https://clang.llvm.org/> LLVM 的 C 语言系列前端。
+- MSVC：集成在 Microsoft VisualStudio 中的构建工具。
 
 相关参考：
 
