--- a/C&CPP/01-C-Basic/07-存储类别.md
+++ b/C&CPP/01-C-Basic/07-存储类别.md
@@ -73,7 +73,7 @@ C使用作用域、链接、存储时期来定义5钟存储类：自动、寄存
 
 ### 1.5 存储类别说明符（Storage Class Specifier）
 
-关键字 static 和 extern 的含义取决于上下文，C 语言有 6 个关键字作为存储类别声明符：`auto、register、extern、static、_Thread_local 和 typedef(语法原因归于此处)`。大多数情况下不能同时使用多个存储类别说明符，不能将任一存储类别说明符作为 typedef 的一部分。唯一列外的是`_Thread_local`，它可以和 `static和extern` 一起使用。
+关键字 static 和 extern 的含义取决于上下文，C 语言有 6 个关键字作为存储类别声明符：`auto、register、extern、static、_Thread_local 和 typedef(语法原因归于此处)`。大多数情况下不能同时使用多个存储类别说明符，不能将任一存储类别说明符作为 typedef 的一部分。唯一列外的是`_Thread_local`，它可以和 `static 和 extern` 一起使用。
 
 - auto 用它修饰的变量在函数调用时自动在栈上分配存储空间，函数返回时自动释放，auto可以省略不写，auto不能修饰文件作用域的变量。
 - register 编译器对于用register修饰的变量会尽可能分配一个专门的寄存器来存储，但如果实在分配不开寄存器，编译器就把它当auto变量处理了，register不能修饰文件作用域的变量。现在一般编译器的优化都做得很好了，它自己会想办法有效地利用CPU的寄存器，所以现在register关键字也用得比较少了。
@@ -209,6 +209,8 @@ void * memcpy(void * restrict s1, const void * restrict s2, size_t n);
 //memmove()函数允许重叠，它在拷贝数据时不得不更小心，以防在使用数据之前就先覆盖了数据。
 void * memmove(void * s1, const void * s2, size_t n);
 ```
+
+`memcpy()` 的参数带关键字 restrict ，即 `memcpy()` 假设两个内存区域之间没有重叠；而 memmove() 不作这样的假设，所以拷贝过程类似于先把所有字节拷贝到一个临时缓冲区，然后再拷贝到最终目的地。如果使用`memcpy()` 时，两区域出现重叠会怎样？其行为是未定义的，这意味着该函数可能正常工作，也可能失败。编译器不会在本不该使用 `memcpy()` 时禁止你使用，作为程序员，在使用该函数时有责任确保两个区域不重叠。
 
 **restrict 关键字有两个读者**。
 
