--- a/C&CPP/01-C-Basic/24-C标准.md
+++ b/C&CPP/01-C-Basic/24-C标准.md
@@ -13,6 +13,8 @@
 
 ### C 标准的发展
 
+最初，并没有官方的C库。后来，基于 UNIX 的 C 实现成为了标准。ANSI C 委员会主要以这个标准为基础，开发了一个官方的标准库。在意识到 C 语言的应用范围不断扩大后，该委员会重新定义了这个库，使之可以应用于其他系统，具体历程如下：
+
 1. 最初，C语言没有官方标准。1978 年 Brian W.Kernighian和Dennis M.Ritchie 出版了《The C Programming Language》，从而使 C 语言成为目前世界上流行最广泛的高级程序设计语言。而这本书附录中的 C Referrence Manual 成为了事实上的 C 语言标准，被人们称为 K&R C 或者 Classic C。但是，该附录中只定义了 C 语言，却没有定义 C 库。由于 C 的出现离不开 Unix，因此，Unix 上实现的库成为了一个C语言事实上的标准库。
 2. 随着 C 语言的日益流行，美国国家标准化组织（ANSI）在 1983 年成立了一个委员会（X3J11），以制定 C 语言标准。该标准于 1989 年正式被批准采用。它就是 ANSI C 标准。该标准定义了 C 语言标准和 C 的标准库。
 3. 1990年，国际标准化组织（ISO）也要制定了一个 C 标准，以使 C 语言在国际上统一标准，方便使用，他们采用了 ANSI C 标准，通过对 ANSI 标准的少量修改，最终制定了 ISO 9899:1990，又称为 C90。随后，发布了标准文件：ISO/IEC 9899-1990 Programming languages – C。最终第一版的 C 标准被称为 C98 或 C90。算是 C 语言的第一个官方标准。ANSI 亦接受国际标准 C，并不再发展新的 C 标准，由于 ANSI C 出现较早，该标准也称为 ANSI C。
