--- a/C&CPP/01-C-Basic/00-C学习资料.md
+++ b/C&CPP/01-C-Basic/00-C学习资料.md
@@ -7,13 +7,14 @@
 - 《C Primer Plus》
 - 《C程序设计语言中文版》
 - 《嗨翻C语言》
-- [《Linux C编程一站式学习》](https://akaedu.github.io/book/)
 - 《C和指针》
 - 《C陷阱与缺陷》
 - 《C专家编程》
+- [《Linux C编程一站式学习》](https://akaedu.github.io/book/)
 
 教程：
 
+- [riptutorial c](https://riptutorial.com/zh-CN/c)
 - [菜鸟教程](https://www.runoob.com/cprogramming/c-tutorial.html)
 - [The GNU C Programming Tutorial](http://www.crasseux.com/books/ctutorial/)
 - [cppreference](http://zh.cppreference.com/w/%E9%A6%96%E9%A1%B5)
