--- a/C&CPP/01-C-Basic/19-字节对齐与内存分配.md
+++ b/C&CPP/01-C-Basic/19-字节对齐与内存分配.md
@@ -36,3 +36,4 @@
 ## 引用
 
 - [C语言字节对齐问题详解](http://www.cnblogs.com/clover-toeic/p/3853132.html)
+- [#pragma pack 指令详解!](https://www.jianshu.com/p/90a6eef329ec)
