--- a/C&CPP/02-CPP-Basic/02-基础语法.md
+++ b/C&CPP/02-CPP-Basic/02-基础语法.md
@@ -1,9 +1,9 @@
 # C++基本语法
 
 ---
-## 头文件
+## 使用c++标准的头文件
 
-C++头文件没有扩展名，引用头文件方式：
+C++的标准库处理定义C++的特有的特性外，也兼容了c语言标准库，c语言的头文件形如`name.h`,则c++将这个头文件命名为`cname`,也就是去掉了 .h 后缀，在前面加上了c前缀，这里的c表示这是一个属于c语言的标准库头文件。    一般来说，我们应该使用名为`cname`的头文件。比如处理字符时，应该引入`cctye`而不是`ctype.h`。
 
 ```cpp
 #include <iostream>
@@ -40,11 +40,9 @@ namespace spaceA{
 ---
 ## 输入输出
 
-C++ 标准库提供了一组丰富的输入/输出功能。C++ 的 I/O 发生在流中，流是字节序列。
-如果字节流是从设备（如键盘、磁盘驱动器、网络连接等）流向内存，这叫做输入操作。
-如果字节流是从内存流向设备（如显示屏、打印机、磁盘驱动器、网络连接等），这叫做输出操作。
+C++ 标准库提供了一组丰富的输入/输出功能。C++ 的 I/O 发生在流中，流是字节序列。如果字节流是从设备（如键盘、磁盘驱动器、网络连接等）流向内存，这叫做输入操作。如果字节流是从内存流向设备（如显示屏、打印机、磁盘驱动器、网络连接等），这叫做输出操作。
 
- `<iostream>`文件定义了` cin、cout、cerr 和 clog `对象，分别对应于标准输入流、标准输出流、非缓冲标准错误流和缓冲标准错误流。
+ `<iostream>`文件定义了`cin、cout、cerr 和 clog`对象，分别对应于标准输入流、标准输出流、非缓冲标准错误流和缓冲标准错误流。
 
 ```cpp
 using namespace std;
@@ -88,7 +86,9 @@ void method(int value){
 ```
 
 ---
-## C++ 中的左值（Lvalues）和右值（Rvalues）
+## 变量、左值（Lvalues）、右值（Rvalues）
+
+变量提供了程序可以操作的有名字的存储区。C++ 中的每一个变量都有特定的类型，该类型决定了变量的内存大小和布局、能够存储于该内存中的值的取值范围以及可应用在该变量上的操作集。C++ 程序员常常把变量称为“变量”或“对象（object）”。
 
 C++ 中有两种类型的表达式：
 
@@ -129,4 +129,4 @@ and    bitand    compl    no    or_eq    xor_eq
 and_eq    bitor    not    or    xor
 ```
 
-除了关键字，C++ 标准还保留了一组标识符用于标准库。 **标识符不能包含两个连续的下划线，也不能以下划线开头后面紧跟一个大写字母。有些标识符（在函数外定义的标识符）不能以下划线开头** 
+除了关键字，C++ 标准还保留了一组标识符用于标准库。 **标识符不能包含两个连续的下划线，也不能以下划线开头后面紧跟一个大写字母。有些标识符（在函数外定义的标识符）不能以下划线开头** 。
