--- a/C&CPP/02-CPP-Basic/04-字符串.md
+++ b/C&CPP/02-CPP-Basic/04-字符串.md
@@ -8,12 +8,11 @@ C++ 提供了以下两种类型的字符串表示形式：
 ---
 ## 1 C 风格字符串
 
-C 风格的字符串起源于 C 语言，并在 C++ 中继续得到支持。字符串实际上是使用 null 字符 '\0' 终止的一维字符数组。
-因此，一个以 null 结尾的字符串，包含了组成字符串的字符。
+C 风格的字符串起源于 C 语言，并在 C++ 中继续得到支持。字符串实际上是使用 null 字符 '\0' 终止的一维字符数组。因此，一个以 null 结尾的字符串，包含了组成字符串的字符。
 
 C 中有大量的函数用来操作以 null 结尾的字符串。比如下面列举的函数：
 
-```
+```cpp
 strcpy(s1, s2); 作用为：复制字符串 s2 到字符串 s1。
 strcat(s1, s2); 作用为：连接字符串 s2 到字符串 s1 的末尾。
 strlen(s1); 作用为：返回字符串 s1 的长度。
@@ -34,14 +33,46 @@ strstr(s1, s2); 作用为：返回一个指针，指向字符串 s1 中字符串
 
 c++ 中的字符串是可变的，我们能改变字符串中的字符，标准库中并没有提供操作和判断字符串的头文件，在 `cctype` 头文件中定义了一组标准的库函数用于处理和判断字符。对于 string 的操作和判断，也只能通过 `cctype` 中提供的函数来封装。
 
-### size_type类型
+### size_type 类型
 
 字符串的size方法返回的类型是`string::size_type`，这在c++中很常见，string类和其他标准库类型都定义了几种配套类型，这些配套类型体现了与机器无关的特性，size_type就是其中一种，size_type是一种无符号类型，且保证其长度可以容纳string的size。
 
----
-## 3 使用c++标准的头文件
+### 多行字符串
 
-C++的标准库处理定义C++的特有的特性外，也兼容了c语言标准库，c语言的头文件形如`name.h`,则c++将这个头文件命名为`cname`,也就是去掉了.h后缀，在前面加上了c前缀，这里的c表示这是一个属于c语言的标准库头文件。    一般来说，我们应该使用名为`cname`的头文件。比如处理字符时，应该引入`cctye`而不是`ctype.h`。
+**字符串字面值的连接**：两个相邻的仅由空格、制表符或换行符分开的字符串字面值（或宽字符串字面值），可连接成一个新字符串字面值。这使得多行书写长字符串字面值变得简单：
+
+```cpp
+// concatenated long string literal
+std::cout << "a multi-line "
+            "string literal "
+            "using concatenation"
+             std::endl;
+```
+
+处理长字符串有一个更基本的（但不常使用）方法，这个方法依赖于很少使用的程序格式化特性：在一行的末尾加一反斜线符号可将此行和下一行当作同一行处理。
+
+```cpp
+std::cou\
+t << "Hi" << st\
+d::endl;
+
+// 等价于
+std::cout << "Hi" << std::endl;
+```
+
+可以使用这个特性来编写长字符串字面值：
+
+```cpp
+// multiline string literal
+std::cout << "a multi-line \
+        string literal \
+        using a backslash"
+        << std::endl;
+```
+
+## 3 字符串输入输出
+
+- [ ]
 
 ---
 ## 4 混用string和c风格字符串
