--- a/C&CPP/02-CPP-Basic/12-面向对象.md
+++ b/C&CPP/02-CPP-Basic/12-面向对象.md
@@ -1,7 +1,7 @@
 # 面向对象
 
 ---
-## 1 继承 
+## 1 继承
 
 面向对象程序设计中最重要的一个概念是继承。继承允许我们依据另一个类来定义一个类，这使得创建和维护一个应用程序变得更容易。这样做，也达到了重用代码功能和提高执行时间的效果。
 
@@ -33,8 +33,7 @@ base-class 是之前定义过的某个类的名称。如果未使用访问修饰
 ---
 ## 3 继承类型
 
-当一个类派生自基类，该基类可以被继承为 `public`、`protected` 或 `private` 几种类型。
-继承类型是通过访问修饰符来指定的。
+当一个类派生自基类，该基类可以被继承为 `public`、`protected` 或 `private` 几种类型。继承类型是通过访问修饰符来指定的。
 
 - 公有继承（`public`）：当一个类派生自公有基类时，基类的公有成员也是派生类的公有成员，
 基类的保护成员也是派生类的保护成员，基类的私有成员不能直接被派生类访问，但是可以通过调用基类的公有和保护成员来访问。
