--- a/C&CPP/02-CPP-Basic/08-数组.md
+++ b/C&CPP/02-CPP-Basic/08-数组.md
@@ -1,8 +1,46 @@
 # C++数组
 
+数组（array）是一种数据格式，能够存储多个同类型的值。
+
 - 数组是大小确定的容器，只有在定义数组时才能使用初始化，此后就不能使用了，也不能将一个数组赋值给另一个数组。
 - 使用数组的时候，编译器一般会把它转换为指针，数组名就表示一个指针。
 - 指针也是迭代器，通过指针可以迭代数组中的元素
 - c++提供了库函数`begin(array)和end(array)`来获取首元素指针和尾元素指针。
 - 访问数组的索引应该使用`size_t`类型
 - 两个指针相减的结果是`ptrdiff_t`类型
+
+## 初始化规则
+
+C++有几条关于初始化数组的规则，它们限制了初始化的时刻，决定了数组的元素数目与初始化器中值的数目不相同时将发生的情况。
+
+- 只有在定义数组时才能使用初始化，此后就不能使用了，也不能将一个数组赋给另一个数组。
+- 可以使用下标分别给数组中的元素赋值。
+- 初始化数组时，提供的值可以少于数组的元素数目。
+- 如果只对数组的一部分进行初始化，则编译器将把其他元素设置为0。因此，将数组中所有的元素都初始化为0非常简单—只要显式地将第一个元素初始化为0，然后让编译器将其他元素都初始化为0即可。
+- 如果初始化数组时方括号内（[]）为空，C++编译器将计算元素个数。
+
+```cpp
+int arr[3] = {1,2,3};
+```
+
+## C++11数组初始化方法
+
+初始化数组时，可省略等号（=）
+
+```cpp
+int arr[3] {1,2,3};
+```
+
+可不在大括号内包含任何东西，这将把所有元素都设置为零
+
+```cpp
+int arr[3] = {};
+```
+
+列表初始化禁止缩窄转换
+
+```cpp
+long plifs[] = {23, 92, 9.0}; //不允许
+char slifs[4] {'h', 'i', 12312223, '\0'};// 不允许，12312223超出范围
+char slifs[4] {'h', 'i', 12, '\0'};// 允许
+```
