--- a/C&CPP/02-CPP-Basic/02-基础语法.md
+++ b/C&CPP/02-CPP-Basic/02-基础语法.md
@@ -3,7 +3,7 @@
 ---
 ## 使用c++标准的头文件
 
-C++的标准库处理定义C++的特有的特性外，也兼容了c语言标准库，c语言的头文件形如`name.h`,则c++将这个头文件命名为`cname`,也就是去掉了 .h 后缀，在前面加上了c前缀，这里的c表示这是一个属于c语言的标准库头文件。    一般来说，我们应该使用名为`cname`的头文件。比如处理字符时，应该引入`cctye`而不是`ctype.h`。
+C++的标准库处理定义C++的特有的特性外，也兼容了c语言标准库，c语言的头文件形如`name.h`，则c++将这个头文件命名为`cname`,也就是去掉了 .h 后缀，在前面加上了c前缀，这里的c表示这是一个属于c语言的标准库头文件。一般来说，我们应该使用名为`cname`的头文件。比如处理字符时，应该引入`cctye`而不是`ctype.h`。
 
 ```cpp
 #include <iostream>
