--- a/C&CPP/02-CPP-Basic/20-模板.md
+++ b/C&CPP/02-CPP-Basic/20-模板.md
@@ -1,18 +1,15 @@
 # 模板
 
-模板是泛型编程的基础，泛型编程即以一种独立于任何特定类型的方式编写代码。模板是创建泛型类或函数的蓝图或公式。库容器，比如迭代器和算法，都是泛型编程的例子，它们都使用了模板的概念。
-
-c++提供了函数模板(function template)所谓函数模板，实际上是建立一个通用函数，其函数类型和形参类型不具体制定，用一个虚拟的类型来代表。这个通用函数就成为函数模板。凡是函数体相同的函数都可以用这个模板代替，不必定义多个函数，只需在模板中定义一次即可。在调用函数时系统会根据实参的类型来取代模板中的虚拟类型，从而实现不同函数的功能。
+模板是泛型编程的基础，泛型编程即以一种独立于任何特定类型的方式编写代码。模板是创建泛型类或函数的蓝图或公式。库容器，比如迭代器和算法，都是泛型编程的例子，它们都使用了模板的概念。可以将模板看作**为编译器生成类或函数编写的一份说明**，编译器根据模板生成类或者函数的过程称为实例化。当使用模板时，需要指定编译器需要把类或函数实例化成何种类型。
 
 c++提供两种模板机制:**函数模板和类模板**，使得程序(算法)可以从逻辑上抽象，把被处理的对象(数据)类型作为参数传递。
-
-- 模板把函数或类要处理的数据类型参数化，表现为参数的多态性，成为类属
-- 模板用于表达逻辑结构相同，但具体数据元素类型不同的数据对象的通用行为
 
 ---
 ## 1 函数模板
 
-用模板是为了实现泛型，可以减轻编程的工作量，增强函数的重用性
+函数模板(function template)，实际上是建立一个通用函数，其函数类型和形参类型不具体制定，用一个虚拟的类型来代表。这个通用函数就称为函数模板。凡是函数体相同的函数都可以用这个模板代替，不必定义多个函数，只需在模板中定义一次即可。在调用函数时系统会根据实参的类型来取代模板中的虚拟类型，从而实现不同函数的功能。
+
+用模板是为了实现泛型，可以减轻编程的工作量，增强函数的重用性。
 
 函数模板和普通函数的区别：
 
@@ -41,7 +38,7 @@ gcc编译过程:
 - 汇编(Assembling)
 - 链接(Linking)
 
-```
+```shell
 gcc *.c -o *.exe    #总的编译步骤
 
 gcc -E 1.c -o1.i    #预处理
@@ -52,8 +49,7 @@ gcc 1.o -o 1.exe   #链接
 
 ![](images/gcc_process.png)
 
-gcc编译编译工具是一个工具链，hello.c程序是高级c语言程序，这种程序易于被人读懂。为了在系统上运行hello.c程序，每一条c语句都必须转化为低级的机器指令。
-然后将这些机器指令打包成可执行目标文件格式，并以二进制形式存储于磁盘中。
+gcc编译编译工具是一个工具链，hello.c程序是高级c语言程序，这种程序易于被人读懂。为了在系统上运行hello.c程序，每一条c语句都必须转化为低级的机器指令。然后将这些机器指令打包成可执行目标文件格式，并以二进制形式存储于磁盘中。
 
 #### 分析
 
@@ -107,7 +103,6 @@ int main(void){
 - 从类模板实例化的每一个模板类有自己的类模板数据成员，该模板的所有对象共享一个static数据成员
 - 和非模板类的static数据成员一样，模板类的static数据成员也应该在文件范围定义和初始化
 - 每个模板类有自己类模板的static数据成员的副本
-
 
 ---
 ## 3 把模板的实现和声明都写在头文件中
