--- a/C&CPP/02-CPP-Basic/04-字符串.md
+++ b/C&CPP/02-CPP-Basic/04-字符串.md
@@ -22,7 +22,7 @@ strstr(s1, s2); 作用为：返回一个指针，指向字符串 s1 中字符串
 ```
 
 ---
-## 2 C++标准库中string
+## 2 C++ 标准库中 string
 
 标准库中的 string 表示可变长的字符序列。string 支持上述c中所有的字符串操作，另外还增加了其他更多的功能。对于 string，需要掌握以下内容
 
@@ -31,11 +31,65 @@ strstr(s1, s2); 作用为：返回一个指针，指向字符串 s1 中字符串
 - 字符串的操作
 - 操作字符串的单个字符
 
+### 字符串的比较
+
+== 操作符比较两个 string 对象，如果它们相等，则返回 true。两个 string 对象相等是指它们的长度相同，且含有相同的字符。标准库还定义了 != 操作符来测试两个 string 对象是否不等。
+
+### string对象的赋值
+
+可以把一个 string 对象赋值给另一个 string 对象；这是一个拷贝操作：
+
+```cpp
+// 赋值操作后，st1 就包含了 st2 串所有字符的一个副本。
+string st2 = "abc";
+string st1 = st2;
+```
+
+复制操作的具体步骤是：它必须先把 st1 占用的相关内存释放掉，然后再分配给 st2 足够存放 st2 副本的内存空间，最后把 st2 中的所有字符复制到新分配的内存空间。
+
+### string对象相加
+
+string 对象的加法被定义为连接（concatenation）。也就是说，两个（或多个）string 对象可以通过使用加操作符 + 或者复合赋值操作符 += 连接起来。但是由于 c++ 中，string 和字符串字面量不是同一中类型，当进行 string 对象和字符串字面值混合连接操作时，+ 操作符的左右操作数必须至少有一个是 string 类型的：
+
+```cpp
+ring s1 = "hello";
+string s2 = "world";
+string s3 = s1 + ", ";// ok: adding a string and a literal
+string s4 = "hello" + ", ";// error: no string operand
+string s5 = s1 + ", " + "world"; // ok: each + has string operand
+string s6 = "hello" + ", " + s2; // error: can't add string literals
+```
+
+### 字符处理
+
 c++ 中的字符串是可变的，我们能改变字符串中的字符，标准库中并没有提供操作和判断字符串的头文件，在 `cctype` 头文件中定义了一组标准的库函数用于处理和判断字符。对于 string 的操作和判断，也只能通过 `cctype` 中提供的函数来封装。
+
+```cpp
+string a = "abc";
+a[0] = '3';
+```
+
+cctype 函数列表：
+
+函数 | 说明
+---|---
+isalnum(c) | 如果 c 是字母或数字，则为 True。
+isalpha(c) | 如果 c 是字母，则为 true。
+iscntrl(c) | 如果 c 是控制字符，则为 true
+isdigit(c) | 如果 c 是数字，则为 true。
+isgraph(c) | 如果 c 不是空格，但可打印，则为 true。
+islower(c) | 如果 c 是小写字母，则为 true。
+isprint(c) | 如果 c 是可打印的字符，则为 true。
+ispunct(c) | 如果 c 是标点符号，则 true。
+isspace(c) | 如果 c 是空白字符，则为 true。
+isupper(c) | 如果 c 是大写字母，则 true。
+isxdigit(c) | 如果是 c 十六进制数，则为 true。
+tolower(c) | 如果 c 大写字母，返回其小写字母形式，否则直接返回 c。
+toupper(c) | 如果 c 是小写字母，则返回其大写字母形式，否则直接返回
 
 ### size_type 类型
 
-字符串的size方法返回的类型是`string::size_type`，这在c++中很常见，string类和其他标准库类型都定义了几种配套类型，这些配套类型体现了与机器无关的特性，size_type就是其中一种，size_type是一种无符号类型，且保证其长度可以容纳string的size。
+字符串的size方法返回的类型是`string::size_type`，这在c++中很常见，string类和其他标准库类型都定义了几种配套类型，这些配套类型体现了与机器无关的特性，size_type 就是其中一种，size_type 是一种无符号类型，且保证其长度可以容纳 string 的 size。
 
 ### 多行字符串
 
@@ -72,14 +126,65 @@ std::cout << "a multi-line \
 
 ## 3 字符串输入输出
 
-- [ ]
+### 从 cin 输入字符串
+
+从标准输入读取 string 并将读入的串存储在 s 中。string 类型的输入操作符，其行为是
+
+- 读取并忽略开头所有的空白字符（如空格，换行符，制表符）。
+- 读取字符直至再次遇到空白字符，读取终止。
+- 如果只输入空白字符，将被忽略，且不从函数返回。
+
+```cpp
+//输入：a b c
+string receive1;
+string receive2;
+string receive3;
+cin >> receive1;//a
+cin >> receive2;//b
+cin >> receive3;//c
+//输出：input is abc
+cout << "input is " << receive1 << receive2 << receive3 << endl;
+
+//输入和输出操作的行为与内置类型操作符基本类似。尤其是，这些操作符返回左操作数作为运算结果。因此，我们可以把多个读操作或多个写操作放在一起
+cin >> receive1 >> receive2 >> receive3;//c
+cout << "input is " << receive1 << receive2 << receive3 << endl;
+
+string result;
+//直接按回车，>> 不会返回。
+while (cin >> result) {
+if (result == "q") {
+        break;
+}
+cout << "result size " << result.size() << endl;
+cout << result << endl;
+}
+```
+
+### 使用getline读取整行文本
+
+getline。函数接受两个参数：一个输入流对象和一个 string 对象。getline 函数从输入流的下一行读取，并保存读取的内容到不包括换行符。和输入操作符不一样的是，getline 并不忽略行开头的换行符。只要 getline 遇到换行符，即便它是输入的第一个字符，getline 也将停止读入并返回。如果第一个字符就是换行符，则 string 参数将被置为空 string。
+
+```cpp
+/**
+ * 使用getline读取整行文本
+ */
+void getStringByGetLine() {
+    string result;
+    getline(cin, result);
+    cout << "result size = " << result.size() << endl;
+    cout << "result = " << result << endl;
+}
+```
 
 ---
-## 4 混用string和c风格字符串
+## 4 混用 string 和 c 风格字符串
 
-- 允许使用以空字符结束的字符数组来初始化string对象或为string对象赋值
-- 在string对象的加法运算中，允许使用以空字符结束的字符数组作为其中一个运算对象(不能两个都是)
-- 在string对象的复合赋值运算中允许使用以空字符结束的字符数组作为右侧的运算对象
-- string对象的`c_str()`方法返回一个字符指针，这是一个c风格的字符串。这是一个const的字符指针
+- 允许使用以空字符结束的字符数组来初始化 string 对象或为 string 对象赋值。
+- 在 string 对象的加法运算中，允许使用以空字符结束的字符数组作为其中一个运算对象(不能两个都是)。
+- 在 string 对象的复合赋值运算中允许使用以空字符结束的字符数组作为右侧的运算对象。
+- string 对象的 `c_str()` 方法返回一个字符指针，这是一个 c 风格的字符串。还是一个 const 的字符指针。
 
-**尽管C++支持C风格的字符串，但是不建议使用它们，使用不够方便，而且容易引起程序漏洞。**
+**注意**：
+
+- 因为历史原因以及为了与 C 语言兼容，字符串字面值与标准库 string 类型不是同一种类型。这一点很容易引起混乱，编程时一定要注意区分字符串字面值和 string 数据类型的使用。
+- 标准库 string 类型和字符串字面值  尽管 C++ 支持 C 风格的字符串，但是不建议使用它们，使用不够方便，而且容易引起程序漏洞。
