--- a/C&CPP/02-CPP-Basic/06-迭代器.md
+++ b/C&CPP/02-CPP-Basic/06-迭代器.md
@@ -1,52 +1,84 @@
 # 迭代器
 
-迭代器是一种机制，用于迭代容器(比如string或vector)中的元素。类似于指针类型，迭代器也提供了对对象的间接访问。和指针不一样的是，获取迭代器不是使用取地址符，有迭代器的类型同时拥有返回迭代器的成员，这些类型都有begin和end成员。end指向一个不存在的尾后，称为尾后迭代器(尾迭代器)，如果容器的为空，则begin和end同时指向尾迭代器。
+除了使用下标来访问容器对象中的元素外，标准库还提供了另一种访问元素的方法：使用**迭代器（iterator）**。
+
+迭代器是一种机制，用于迭代容器(比如 string 或 vector)中的元素。类似于指针类型，迭代器也提供了对对象的间接访问。和指针不一样的是，获取迭代器不是使用取地址符，有迭代器的类型同时拥有返回迭代器的成员，这些类型都有 begin 和 end 成员。end 指向一个不存在的尾后，称为尾后迭代器(尾迭代器)，如果容器的为空，则 begin 和 end 同时指向尾迭代器。
+
+**迭代器更为通用**：标准库为每一种标准容器（包括 vector）定义了一种迭代器类型。迭代器类型提供了比下标操作更通用化的方法：所有的标准库容器都定义了相应的迭代器类型，而只有少数的容器支持下标操作。
 
 ---
 ## 1 泛型编程
 
-C++程序员习惯性的使用`!=`，其原因与他们更愿意使用迭代器而非下标的原因一样。这种编程风格在标准库提供的所有容器上都有效。所有标准库容器的迭代器都定义了`!=和=`，但它们中大多没有`<`运算符。因此只要养成此种(使用迭代器和`!=`)编程习惯，就不用太在意使用的是哪种类型的迭代器。
+C++ 程序员习惯性的使用`!=`，其原因与他们更愿意使用迭代器而非下标的原因一样。这种编程风格在标准库提供的所有容器上都有效。所有标准库容器的迭代器都定义了`!=和=`，但它们中大多没有`<`运算符。因此只要养成此种(使用迭代器和`!=`)编程习惯，就不用太在意使用的是哪种类型的迭代器。
+
+```cpp
+vector<int> ivec(1,10);
+
+for (vector<int>::iterator iter = ivec.begin(); iter != ivec.end(); ++iter){
+    *iter = 0;
+}
+```
 
 ---
 ## 2 迭代器类型
 
-不需要知道iterator到底是什么类型，标准库使用`iterator和const_iterator`表示迭代器类型
+每种容器类型都定义了自己的迭代器类型，如 vector：
 
+```cpp
+// 定义了一个名为 iter 的变量，它的数据类型是 vector<int> 定义的 iterator 类型。
+// 这里的 iterator 与迭代器实际类型的含义相同。
+vector<int>::iterator iter;
 ```
-vector<int>::iterator it;//it能读写vector中的元素
-string::iterator it;//it能读写string中的元素
-vector<int>::const_iterator it;//it只能读取vector中的元素
-string::const_iterator it;//it只能读取string中的元素
-```
 
-迭代器这个名词有三个概念：
+**迭代器和迭代器类型**：迭代器这个名词有三个概念：
 
-- 迭代器概念本身
-- 容器定义的迭代器类型
-- 指某个具体的迭代器对象
-
-而重点在于理解一组概念上相关的类型，我们认为某个类型是迭代器，当且仅的它支持一套操作，这套操作使得我们可以访问容器的元素或者从某个元素移动到另一个元素。每个容器类定义的iterator都支持这么一套操作。
-
-begin和end返回的类型与对象是否为常量决定，如果对象是常量，则begin和end返回const_iterator类型，如果不是const的则返回iterator类型。
+- 迭代器概念本身：我们认为某个类型是迭代器，当且仅的它支持一套操作，这套操作使得我们可以访问容器的元素或者从某个元素移动到另一个元素。
+- 容器定义的迭代器类型：每个容器都定义了一个名为 iterator 的类型，而这种类型支持（概念上的）迭代器的各种操作。
+- 指某个具体的迭代器对象：比如`vector<int>::iterator it;`。
 
 ---
-## 3 迭代器运算
+## 3 begin 和 end
 
-iter表示迭代器
+- 每种容器都定义了一对命名为 begin 和 end 的函数，用于返回迭代器。如果容器中有元素的话，由 begin 返回的迭代器指向第一个元素。
+- 由 end 操作返回的迭代器指向 vector 的“末端元素的下一个”。“超出末端迭代器”（off-the-end iterator）。表明它指向了一个不存在的元素。如果 vector 为空，begin 返回的迭代器与 end 返回的迭代器相同。end 的作用是作为一个哨兵（sentinel），表示我们已处理完 vector 中所有元素。
 
-- `*iter`：返回迭代器所指向元素的引用
-- `iter->men`：解引用iter，等价于(*iter).mem
-- `++iter`：指向下一个元素
-- `--iter`：指向上一个元素
+## 4 迭代器运算
+
+iter 表示迭代器，迭代器支持如下运算：
+
+- `*iter`：返回迭代器所指向元素的引用。
+- `iter->men`：解引用 iter，等价于`(*iter).mem`。
+- `++iter`：指向下一个元素。
+- `--iter`：指向上一个元素。
 - `iter1 == iter2`：如果两个迭代器指示的是同一个元素，或它们是同一个容器的尾迭代器则相等。
-- `iter1 != iter2`
-- `iter +n`：向后移动n个位置
-- `iter +=n`：迭代器加法符合语句，将iter+n的结果赋值给inter
-- `>、<、<=、>=`：位置比较
+- `iter1 != iter2`。
+- `iter +n`：向后移动n个位置。
+- `iter +=n`：迭代器加法符合语句，将iter+n的结果赋值给inter。
+- `>、<、<=、>=`：位置比较。
 
 注意：但凡使用了迭代器循环体，就不要向迭代器所属容器添加元素了。
 
 ---
-## 4 `->` 操作符
+## 5 `const_iterator` 类型
 
-`->`操作符把解引用和成员操作符结合在一起
+每种容器类型还定义了一种名为 const_iterator 的类型，它自身的值可以改变，但不能用来改变其所指向的元素的值。可以对迭代器进行自增以及使用解引用操作符来读取值，但不能对该元素赋值。
+
+- `begin()` 和 `end()` 返回的类型与对象是否为常量决定，如果对象是常量，则 `begin()` 和 `end()` 返回 const_iterator 类型，如果不是 const 的则返回 iterator 类型。
+- 另外，容器还有 `cbegin()` 和 `cend()` 函数，用于返回 const_iterator。
+
+```cpp
+vector<int> vector1(1, 10);
+const vector<int> vector2(1, 10);
+vector<int>::iterator begin1 = vector1.begin();//能读写vector中的元素
+vector<int>::iterator end1 = vector1.end();//能读写string中的元素
+vector<int>::const_iterator cbegin1 = vector1.cbegin();//只能读取vector中的元素
+vector<int>::const_iterator cend1 = vector1.cend();//只能读取string中的元素
+
+vector<int>::const_iterator begin2 = vector2.begin();
+vector<int>::const_iterator end2 = vector2.end();
+```
+
+---
+## 6 `->` 操作符
+
+`->`操作符把解引用和成员操作符结合在一起。
