--- a/C&CPP/02-CPP-Basic/06-迭代器.md
+++ b/C&CPP/02-CPP-Basic/06-迭代器.md
@@ -42,6 +42,7 @@ vector<int>::iterator iter;
 - 每种容器都定义了一对命名为 begin 和 end 的函数，用于返回迭代器。如果容器中有元素的话，由 begin 返回的迭代器指向第一个元素。
 - 由 end 操作返回的迭代器指向 vector 的“末端元素的下一个”。“超出末端迭代器”（off-the-end iterator）。表明它指向了一个不存在的元素。如果 vector 为空，begin 返回的迭代器与 end 返回的迭代器相同。end 的作用是作为一个哨兵（sentinel），表示我们已处理完 vector 中所有元素。
 
+---
 ## 4 迭代器运算
 
 iter 表示迭代器，迭代器支持如下运算：
@@ -52,11 +53,11 @@ iter 表示迭代器，迭代器支持如下运算：
 - `--iter`：指向上一个元素。
 - `iter1 == iter2`：如果两个迭代器指示的是同一个元素，或它们是同一个容器的尾迭代器则相等。
 - `iter1 != iter2`。
-- `iter +n`：向后移动n个位置。
+- `iter +n`：向后移动n个位置。`vector<int>::iterator mid = vi.begin() + vi.size() / 2;` 可以定位到 vector 的中间位置。
 - `iter +=n`：迭代器加法符合语句，将iter+n的结果赋值给inter。
 - `>、<、<=、>=`：位置比较。
 
-注意：但凡使用了迭代器循环体，就不要向迭代器所属容器添加元素了。
+注意：但凡使用了迭代器循环体，就不要向迭代器所属容器添加元素了。因为任何改变容器长度的操作都会使已存在的迭代器失效。例如，在调用 vector 的 push_back 之后，就不能再信赖指向 vector 的迭代器的值了。
 
 ---
 ## 5 `const_iterator` 类型
@@ -82,3 +83,10 @@ vector<int>::const_iterator end2 = vector2.end();
 ## 6 `->` 操作符
 
 `->`操作符把解引用和成员操作符结合在一起。
+
+```cpp
+string name = "Jordan";
+string *pName = &name;
+
+cout << "pName->size() = " << pName->size() << endl;
+```
