--- a/C&CPP/02-CPP-Basic/11-面向对象.md
+++ b/C&CPP/02-CPP-Basic/11-面向对象.md
@@ -237,3 +237,13 @@ d.Base::memfcn(); //  调用Base的memfcn
 ## 13 接口（抽象类）
 
 接口描述了类的行为和功能，而不需要完成类的特定实现。如果类中至少有一个函数被声明为纯虚函数(包括定义的和继承的)，则这个类就是抽象类。设计抽象类的目的是为了给其他类提供一个可以继承的适当的基类。抽象类不能被用于实例化对象，它只能作为接口使用。
+
+---
+## 14 运行时类型识别
+
+通过下面两个操作符提供 RTTI：
+
+1. typeid 操作符，返回指针或引用所指对象的实际类型。
+2. dynamic_cast 操作符，将基类类型的指针或引用安全地转换为派生类型的指针或引用。
+
+可以使用 dynamic_cast 操作符将基类类型对象的引用或指针转换为同一继承层次中其他类型的引用或指针。与 dynamic_cast 一起使用的指针必须是有效的——它必须为 0 或者指向一个对象。
