--- a/C&CPP/02-CPP-Basic/08-表达式.md
+++ b/C&CPP/02-CPP-Basic/08-表达式.md
@@ -2,8 +2,7 @@
 
 表达式由一个或多个运算对象组成，对表达式求值将会得到一个结果。
 
----
-## 避免陷阱
+## 1 避免陷阱
 
 ```cpp
 if(i =j){//判断条件是 i的值
@@ -14,26 +13,51 @@ if(i == j){//判断条件是i == j
 }
 ```
 
----
-## sizeof
+## 2 sizeof
 
 sizeof返回一条表达式或一个类型名字所占的字节数。
 
----
-## 语句
+## 3 语句
 
-- if语句
-- while
-- 传统for
-- 范围for
+包括：
+
+- if语句。
+- while。
+- 传统for。
+- 范围for。
 - switch：switch 语句中的 expression 必须是一个整型或枚举类型，或者是一个 class 类型，其中 class 有一个单一的转换函数将其转换为整型或枚举类型。
-- goto：goto语句的作用是从goto语句无条件跳转到**同函数**内的另一条语句。不要在程序中使用goto语句。
+- goto：goto语句的作用是从goto语句无条件跳转到**同函数**内的另一条语句。不要在程序中使用 goto 语句。
 - TRY：用于处理异常。
 
----
-## 显式类型转换
+## 4 类型转换
 
-有时候需要将一种数据类型强转为其他类型。
+将一种数据类型强转为其他类型，即类型转换。
+
+- 表达式是否合法取决于操作数的类型，而且合法的表达式其含义也由其操作数类型决定。
+- 若两种类型相关，则可在需要某种类型的操作数位置上，使用该类型的相关类型对象或值。
+- 如果两个类型之间可以相互转换，则称这两个类型相关。
+
+### 隐式类型转换
+
+隐式类型转换：转换规则由编译器自动执行，无需程序员介入——有时甚至不需要程序员了解的转换。比如：
+
+```cpp
+int ival = 0;
+ival = 3.541 + 3; //会遇到编译警告，将 double 类型赋值给 int 类型
+```
+
+对于上述不同类型相加，C++ 并不是把两个不同类型的值直接加在一起，而是提供了一组转换规则，以便在执行算术操作之前，将两个操作数转换为同一种数据类型。
+
+C++ 定义了算术类型之间的内置转换以尽可能防止精度损失。上面语句的执行结果是 `ival = 6`，其具体过程是：
+
+1. 表达式的操作数分别为整型和浮点型，则整型的操作数被转换为浮点型。这里将整数 3 被转换为 double 类型，然后执行浮点类型的加法操作，得 double 类型的结果 6.541。
+2. 下一步是将 double 类型的值赋给 int 型变量 ival，此时会丢弃小数点后面的部分。
+
+发生隐式类型转换的一些场景：
+
+1. 在混合类型的表达式中，其操作数被转换为相同的类型：`int + double`。
+2. 用作条件的表达式被转换为 bool 类型：`while(value)`，value 将被转换为 bool。
+3. 用一表达式初始化某个变量，或将一表达式赋值给某个变量，则该表达式被转换为该变量的类型：`int *pI = 0`，0 被转变为 NULL。
 
 ### 命名的强制类型转换
 
@@ -43,22 +67,70 @@ sizeof返回一条表达式或一个类型名字所占的字节数。
 cast-name<type>(expression);
 ```
 
-type是转换的目标类型，而expression是被转换的值。
+- cast-name 为 static_cast、dynamic_cast、const_cast 和 reinterpret_cast 之一。
+- type 为转换的目标类型。
+- expression 则是被强制转换的值。强制转换的类型指定了在 expression 上执行某种特定类型的转换。
 
-cast-name包括
+cast-name 包括：
 
-- static_cast：任何具有明确定义的类型转换，只要不包含底层const，都可以使用static_cast
-- dynamic_cast：运行时的类型识别，通常在基类和派生类之间转换时使用
-- const_cast：只能改变运算对象的底层const
-  - 将常量转换为非常量，我们称为去掉const性质
-  - 如果一个对象本身不是const的，去掉const性质后获得的写权限是合法的
-  - 如果一个对象是const的，使用const_cast执行写操作就会产生未定义的效果
-- reinterpret_cast：通常为运算对象的位运算模式提供较低层次的重新解释。用于进行没有任何关联之间的转换，比如一个字符指针转换为一个整形数
+- static_cast：任何具有明确定义的类型转换，只要不包含底层 const，都可以使用 static_cast。
+- dynamic_cast：支持运行时识别指针或引用所指向的对象，通常在基类和派生类之间转换时使用。
+- const_cast：只能改变运算对象的底层 const：
+  - 将常量转换为非常量，我们称为去掉 const 性质。
+  - 如果一个对象本身不是 const 的，去掉 const 性质后获得的写权限是合法的。
+  - 如果一个对象是 const 的，使用 const_cast 执行写操作就会产生未定义的效果。
+- reinterpret_cast：通常为运算对象的位运算模式提供较低层次的重新解释。用于进行没有任何关联之间的转换，比如一个字符指针转换为一个整形数。
+
+#### static_cast
+
+编译器隐式执行的任何类型转换都可以由 static_cast 显式完成。有以下场景可以使用 static_cast
+
+1. 将一个较大的算术类型赋值给较小的类型时，使用强制类型转换告诉程序的读者和编译器：我们知道并且不关心潜在的精度损失。此时将不会有编译警告。
+2. 如果编译器不提供自动转换，使用 static_cast 来执行类型转换也是很有用的。比如将 viod* 指针转换为其他类型的指针。
+
+```cpp
+id* p = &d; // 任何类型的指针都可以用 void* 来存储。
+double *dp = static_cast<double*>(p);//使用 static_cast 将 void* 转换为原来的类型。
+```
+
+#### dynamic_cast
+
+dynamic_cast 与运行时类型识别有关，通过运行时类型识别（RTTI），程序能够使用基类的指针或引用来检索这些指针或引用所指对象的实际派生类型。
+
+#### const_cast
+
+只有使用 const_cast 才能将 const 性质转换掉。除了添加或删除 const 特性，用 const_cast 符来执行其他任何类型转换，都会引起编译错误。
+
+示例：
+
+```cpp
+// 当一个函数接收非 const 类型参数时，而我们的参数是 const 的，可以使用 const_cast 去掉参数的 const 性质。
+void receiveA(int *pI) {
+
+}
+
+int main() {
+    //const_cast
+    int i3 = 333;
+    const int *p_ci3 = &i3;
+    //函数接收非 const 参数
+    receiveA(const_cast<int *>(p_ci3));
+    return EXIT_SUCCESS;
+}
+```
+
+#### reinterpret_cast
+
+reinterpret_cast 通常为操作数的位模式提供较低层次的重新解释，reinterpret_cast 本质上依赖于机器。为了安全地使用 reinterpret_cast，要求程序员完全理解所涉及的数据类型，以及编译器实现强制类型转换的细节。
+
+对于下面的强制转换：
 
 ```cpp
 int *p
 char *pc = reinterpret_cast<char*>(p)
 ```
+
+程序员必须永远记得 pc 所指向的真实对象其实是 int 型，而并非字符数组。任何假设 pc 是普通字符指针的应用，都有可能带来运行时错误。
 
 ### 旧式的类型转换
 
@@ -67,11 +139,33 @@ char *pc = reinterpret_cast<char*>(p)
 - `type(expr)` 函数形式的类型转换
 - `(type)expr` c风格的类型转换
 
-旧式的类型转换分别具有static_cast、const_cast、reinterpret_cast相似的行为，旧式的转换类型可以替换成命名强制类型转换，如果换成 static_cast、const_cast 合法，则其行为与对应的命名转换一致，否则旧式类型转换执行与reinterpret_cast相似的行为。
+旧式的类型转换分别具有 static_cast、const_cast、reinterpret_cast 相似的行为，旧式的转换类型可以替换成命名强制类型转换：
+
+- 如果换成 static_cast、const_cast 合法，则其行为与对应的命名转换一致。
+- 否则旧式类型转换执行与 reinterpret_cast 相似的行为。
 
 ```cpp
+t ival; double dval;
+ival += int (dval); // static_cast: converts double to int
+
+const char* pc_str;
+string_copy((char*)pc_str); // const_cast: casts away const
+
 int *ip;
-char *pc = (char*)ip;
+char *pc = (char*)ip; // reinterpret_cast: treats int* as char*
 ```
 
-效果与reinterpret_cast一样。
+优先使用命名的类型转换：
+
+- 支持旧式强制转换符号是为了对“在标准 C++ 之前编写的程序”保持向后兼容性，并保持与 C 语言的兼容性。
+- 标准 C++ 为了加强类型转换的可视性，引入命名的强制转换操作符，为程序员在必须使用强制转换时提供了更好的工具。例如：非指针的 static_cast 和 const_cast 要比 reinterpret_cast 更安全。结果使程序员（以及读者和操纵程序的工具）可清楚地辨别代码中每个显式的强制转换潜在的风险级别。
+- 虽然标准 C++ 仍然支持旧式强制转换符号，但是建议只有在 C 语言或标准 C++ 之前的编译器上编写代码时，才使用这种语法。
+
+### 避免使用强制类型转换
+
+强制类型转换关闭或挂起了正常的类型检查。强烈建议程序员避免使用强制类型转换，不依赖强制类型转换也能写出很好的 C++ 程序。
+
+- reinterpret_cast 强制转换总是非常危险的。
+- 使用 const_cast 也总是预示着设计缺陷。设计合理的系统应不需要使用强制转换抛弃 const 特性。
+- static_cast 和 dynamic_cast，各有各的用途，但都不应频繁使用。每次使用强制转换前，程序员应该仔细考虑是否还有其他不同的方法可以达到同一目的。
+- 如果非强制转换不可，则应限制强制转换值的作用域，并且记录所有假定涉及的类型，这样能减少错误发生的机会。
