--- a/C&CPP/02-CPP-Basic/08-表达式.md
+++ b/C&CPP/02-CPP-Basic/08-表达式.md
@@ -15,9 +15,52 @@ if(i == j){//判断条件是i == j
 
 ## 2 sizeof
 
-sizeof返回一条表达式或一个类型名字所占的字节数。
+sizeof 返回一条表达式或一个类型名字所占的字节数。
 
-## 3 语句
+## 3 typeid
+
+typeid 用于在运行时获知变量类型名称，使用方式 `typeid(变量).name()`。typeid 类似 sizeof，是一个操作符而不是函数。typeid 操作符的返回结果是名为 `type_info` 的标准库类型的对象的引用。
+
+示例：
+
+```cpp
+int i = 1;
+long l = 1;
+
+cout << "typeid(i) = " << typeid(i).name() << endl;
+cout << "typeid(l) = " << typeid(l).name() << endl;
+```
+
+上面代码输出：
+
+```log
+typeid(i) = i
+typeid(l) = l
+```
+
+判断某个变量是否为某个类型可以使用以下方式：
+
+```cpp
+#include <cstdlib>
+#include <iostream>
+
+using namespace std;
+
+int main() {
+
+    int i = 1;
+
+    if (typeid(i) == typeid(int)) {
+        cout << "type of i is int" << endl;
+    }
+
+    return EXIT_SUCCESS;
+}
+```
+
+具体参考[C++ typeid关键字详解](https://blog.csdn.net/gatieme/article/details/50947821)
+
+## 4 语句
 
 包括：
 
@@ -29,7 +72,7 @@ sizeof返回一条表达式或一个类型名字所占的字节数。
 - goto：goto语句的作用是从goto语句无条件跳转到**同函数**内的另一条语句。不要在程序中使用 goto 语句。
 - TRY：用于处理异常。
 
-## 4 类型转换
+## 5 类型转换
 
 将一种数据类型强转为其他类型，即类型转换。
 
