--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -119,6 +119,10 @@ class Box { /* ... */ };
 class Box { /* ... */ } boxA, boxB;
 ```
 
+### 使用前置声明还是 include
+
+参考[如何看待C++前置声明？](https://www.zhihu.com/question/63201378)
+
 ---
 ## 2 类的成员
 
